--- a/Mymtc/app/src/main/AndroidManifest.xml
+++ b/Mymtc/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.delevere4.mymtc"
     android:versionCode="1"
-    android:versionName="1.0">>
+    android:versionName="1.0">
+    <uses-sdk android:minSdkVersion="1" android:targetSdkVersion="22"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
 
 
